Fix menu toggle and remove unnecessary whitespace

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-.layout_menu-toggle {
+.layout__menu-toggle {
     display: none;
 }
 
